crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__if__fun_in_else.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/if/fun_in_else.lox
---
success: false
exit_code: 65
----- stdout -----

----- stderr -----
Error: Expect expression.
   ╭─[craftinginterpreters/test/if/fun_in_else.lox:2:22]
   │
 2 │ if (true) "ok"; else fun foo() {}
   │                      ───  
   │                            
───╯
